# fastAPI-cdk

./: .dockerignore  README.md  pyproject.toml
infrastructure/: app.py  cdk.json
infrastructure/infrastructure/: infrastructure_stack.py
infrastructure/tests/unit/: test_infrastructure_stack.py
src/: Dockerfile  main.py  requirements.txt
