[tool.poetry]
name = "fastapi-cdk"
version = "0.1.0"
description = ""
authors = ["Guan Huang <Guan.Huang@team.telstra.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = "0.27.0"
pydantic = "2.5.3"
aws-cdk-lib = "2.101.1"
constructs = ">=10.0.0,<11.0.0"
aws-cdk-aws-lambda-python-alpha = "2.101.1a0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

